--- a/scrum-backend/pom.xml
+++ b/scrum-backend/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
     <properties>
-        <java.version>==</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -43,25 +43,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>23.0.0</version> <!-- Remplacez par la dernière version disponible -->
             <scope>compile</scope>
         </dependency>
-
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-
-
-
-
-
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
@@ -69,31 +56,21 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-        <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt-jackson</artifactId> <!-- ou jjwt-gson si vous préférez -->
-        <version>0.11.5</version>
-        <scope>runtime</scope>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- ou jjwt-gson si vous préférez -->
+            <version>0.11.5</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
-
-
-
-        <!-- Jackson Databind pour la sérialisation/désérialisation JSON -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-
     </dependencies>
-
-
-
-
-
 
     <repositories>
         <repository>
@@ -101,9 +78,6 @@
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
-
-
-
 
     <build>
         <plugins>
