--- a/k8s/scrum-frontend-deployment.yaml
+++ b/k8s/scrum-frontend-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: scrum-frontend
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: scrum-frontend
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: scrum-frontend
-        image: akasbiacrpfa.azurecr.io/scrum-frontend:latest
+        image: scrumifyacr.azurecr.io/scrum-frontend:latest
         ports:
         - containerPort: 80
 ---
