--- a/k8s/scrum-backend-deployment.yaml
+++ b/k8s/scrum-backend-deployment.yaml
@@ -22,6 +22,8 @@ spec:
         env:
         - name: SPRING_DATA_MONGODB_URI
           value: "mongodb://hamza:hamza@mongo:27017/scrumdb?authSource=admin"
+      imagePullSecrets:
+      - name: scrum-secret
 ---
 apiVersion: v1
 kind: Service
