--- a/k8s/scrum-backend-deployment.yaml
+++ b/k8s/scrum-backend-deployment.yaml
@@ -36,4 +36,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP  # Changed from LoadBalancer to ClusterIP
